2009-07-27  Jérôme Lodewyck <lodewyck@users.sourceforge.net>

	* qtterminal/qt_term.cpp qtterminal/QtGnuplot.pro qtterminal/po/*:
	Add an internationalization framework and a french translation.

2009-07-26  Ethan A Merritt  <merritt@u.washington.edu>

	* src/color.c (draw_color_smooth_box) src/gadgets.h src/gadgets.c
	src/graphics.c (boundary):  Add a field color_box.xoffset to allow the
	colorbox to be shifted left or right from the default placement.
	Use this internally to correct for the width taken by y2 tics and
	labels.
	Bugfix:  'set y2tics; plot foo using 1:2:3 axes x1y2 lc palette'

	* src/graphics.c (do_polygon):  Change the clipping rules for polygons
	to match those of rectangles.  A polygon is clipped only if all of its
	vertices are specified in plot coordinates (i.e. not screen or graph
	coordinates.

2009-07-24  Jérôme Lodewyck <lodewyck@users.sourceforge.net>

	* qtterminal/qt_term.cpp: use locale config macros

	* qtterminal/QtGnuplotWindow.cpp: remove the "export to EPS" option.

	* qtterminal/QtGnuplotWidget.cpp: terminal size option is now working
	Changed the default background color from red to white.

	* qtterminal/QtGnuplotScene.cpp: clip the zoom rect on half integer
	coordinates.

	* qtterminal/QtGnuplotInstance.cpp qtterminal/embed_example.cpp: update the
	embed example to follow the new size policy.


2009-07-23  James R. Van Zandt  <jrvz@comcast.net>

	* src/mouse.c (event_buttonpress): Reimplement pan and zoom with
	mouse wheel to use axis_array[].min and .max directly, without
	using the mouse position.  Extend pan and zoom to 3D plots.  Add
	documentation and help printout.

2009-07-20  Benjamin Lindner  <lindnerb@users.sourceforge.net>

	* src/win/winmain.c: enable load of the correct .ico symbol for the
	plotting window within win.trm; LoadIcon(graphwin.hInstance, "GRPICON")
	fails if graphwin.hInstance equals NULL.
	Patch #1627936

2009-07-20  Ethan A Merritt  <merritt@u.washington.edu>
